--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -6,7 +6,7 @@
   margin-top: 30px;
 }
 
-.card__list {
+.cards__list {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
@@ -15,7 +15,7 @@
   margin: 0;
 }
 
-.cards__list_card {
+.cards__card {
   display: flex;
   flex-direction: column;
   border-radius: 10px;
