--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -23,13 +23,13 @@
   overflow: hidden;
 }
 
-.card__img {
+.cards__card_image {
   width: 282px;
   max-height: 282px;
   flex: 0 0 282px;
 }
 
-.card__name {
+.cards__card_description {
   display: flex;
   background-color: white;
   color: black;
@@ -41,7 +41,7 @@
   justify-content: space-between;
 }
 
-.card__title {
+.cards__card_title {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 900;
@@ -53,7 +53,7 @@
   overflow: hidden;
 }
 
-.card__button {
+.cards__card_button {
   background: transparent url(../images/heart\ icon.svg) center no-repeat;
   height: 18px;
   width: 21px;
@@ -61,6 +61,6 @@
   border-radius: 0 0 10px;
 }
 
-.card__button:hover {
+.cards__card_button:hover {
   opacity: 0.5;
 }
