--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -90,7 +90,7 @@
   }
   .profile__title {
     grid-area: title;
-    font-style: normal;
+    font-weight: 500;
     font-size: 22px;
     height: 22px;
     align-items: center;
@@ -105,6 +105,7 @@
   .profile__description {
     grid-area: description;
     padding-bottom: 36px;
+    font-size: 14px;
   }
   .profile__add-button {
     display: flex;
