--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -21,6 +21,10 @@
   border: 1px solid white;
 }
 
+.profile__pencil-button:hover {
+  opacity: 0.6;
+}
+
 .profile__add-button {
   background: transparent url(../images/plus\ sign.svg) center no-repeat;
   width: 150px;
@@ -41,6 +45,8 @@
   grid-area: title;
   margin: 0;
   text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__description {
@@ -52,6 +58,8 @@
   margin: 0;
   box-sizing: border-box;
   text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .profile__pic {
   height: 120px;
