--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -33,10 +33,10 @@
   margin-left: auto;
   border: 2px solid white;
   border-radius: 2px;
+  cursor: pointer;
 }
 .profile__add-button:hover {
   opacity: 0.6;
-  cursor: pointer;
 }
 
 .profile__title {
@@ -110,7 +110,11 @@
   .profile__description {
     grid-area: description;
     font-size: 14px;
+    align-items: center;
+    display: block;
+    text-align: center;
     line-height: 16.94px;
+    max-width: 100%;
   }
   .profile__add-button {
     display: flex;
