--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -89,7 +89,7 @@
     column-gap: 10px;
     row-gap: 14px;
     box-sizing: border-box;
-    grid-template-columns: minmax(auto, 196px) auto;
+    grid-template-columns: minmax(auto, 196px) 18px;
     place-items: center;
     padding-top: 30px;
   }
