--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -25,7 +25,7 @@
   margin: 100%;
 }
 
-.modal__close_button {
+.modal__close-button {
   background-image: url(../images/Close-icon.svg);
   border: none;
   background-color: transparent;
@@ -90,7 +90,7 @@
   color: #000;
 }
 
-.modal__save_button {
+.modal__save-button {
   width: 358px;
   height: 50px;
   max-width: 100%;
