--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -13,7 +13,7 @@
   display: none;
 }
 
-.modal__opened {
+.modal_opened {
   display: flex;
 }
 
@@ -23,6 +23,8 @@
   border-radius: 10px;
   position: relative;
   margin: 100%;
+  width: 430px;
+  max-width: 100%;
 }
 
 .modal__close-button {
@@ -112,6 +114,7 @@
   }
   .modal__heading {
     font-size: 18px;
+    line-height: 22px;
     padding-top: 25px;
     margin-top: 0;
     padding-bottom: 75px;
