--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,4 +1,4 @@
-.modal {
+.popup {
   position: fixed;
   top: 0;
   right: 0;
@@ -10,14 +10,19 @@
   z-index: 999;
   background-color: rgba(0, 0, 0, 0.5);
   padding: 0 19px;
-  display: none;
-}
-
-.modal_opened {
   display: flex;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 0.6s, opacity 0.6s linear;
 }
 
-.modal__container {
+.popup_opened {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s, opacity 0.6s linear;
+}
+
+.popup__container {
   background-color: #fff;
   padding: 36px;
   border-radius: 10px;
@@ -27,7 +32,7 @@
   max-width: 100%;
 }
 
-.modal__close-button {
+.popup__close-button {
   background-image: url(../images/Close-icon.svg);
   border: none;
   background-color: transparent;
@@ -41,7 +46,7 @@
   cursor: pointer;
 }
 
-.modal__heading {
+.popup__heading {
   color: #000;
   font-family: "Inter";
   font-weight: 900;
@@ -54,16 +59,16 @@
   margin-bottom: 0;
 }
 
-.modal__form {
+.popup__form {
   display: flex;
   flex-direction: column;
 }
 
-.modal__title::placeholder {
+.popup__title::placeholder {
   color: #000;
 }
 
-.modal__title {
+.popup__title {
   font-family: "Inter";
   font-size: 14px;
   font-weight: 400;
@@ -75,7 +80,7 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.modal__description {
+.popup__description {
   font-family: "Inter";
   font-size: 14px;
   font-weight: 400;
@@ -88,11 +93,11 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.modal__description::placeholder {
+.popup__description::placeholder {
   color: #000;
 }
 
-.modal__save-button {
+.popup__save-button {
   width: 358px;
   height: 50px;
   max-width: 100%;
@@ -107,40 +112,40 @@
 }
 
 @media screen and (max-width: 544px) {
-  .modal {
+  .popup {
     top: 123px;
   }
 
-  .modal__container {
+  .popup__container {
     margin: 0;
     max-height: 322px;
     max-width: 282px;
     box-sizing: border-box;
     padding: 0;
   }
-  .modal__heading {
+  .popup__heading {
     font-size: 18px;
     line-height: 22px;
     margin: 25px 0 0;
     padding: 0 22px 0;
     max-width: 238px;
   }
-  .modal__form {
+  .popup__form {
     padding: 0 22px 0;
   }
-  .modal__title {
+  .popup__title {
     margin-top: 0;
     max-width: 238px;
     padding-top: 75px;
   }
-  .modal__close-button {
+  .popup__close-button {
     width: 26px;
     height: 26px;
     left: calc(100% - 26px);
     bottom: calc(100% + 39px);
   }
 
-  .modal__description {
+  .popup__description {
     max-width: 238px;
     margin-top: 0;
     padding-top: 30px;
@@ -148,7 +153,7 @@
     margin-bottom: 45px;
     margin-bottom: 0;
   }
-  .modal__save-button {
+  .popup__save-button {
     width: 238px;
     height: 46px;
     margin-bottom: 25px;
