--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -62,22 +62,23 @@
   flex-direction: column;
 }
 
-.popup__title::placeholder {
+.popup__input::placeholder {
   color: #000;
 }
 
-.popup__title {
+.popup__input {
   font-family: "Inter";
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
   border: none;
-  margin-top: 54px;
+  padding-top: 54px;
   padding-bottom: 13px;
+  margin-bottom: 29px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.popup__description {
+/* .popup__input_type_url {
   font-family: "Inter";
   font-size: 14px;
   font-weight: 400;
@@ -86,12 +87,12 @@
   margin-top: 43px;
   margin-bottom: 48px;
   padding-bottom: 13px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2); */
+/* } */
 
-.popup__description::placeholder {
+/* .popup__input::placeholder {
   color: #000;
-}
+} */
 
 .popup__save-button {
   width: 358px;
