--- a/blocks/card.css
+++ b/blocks/card.css
@@ -11,6 +11,7 @@
   width: 282px;
   max-height: 282px;
   flex: 0 0 282px;
+  cursor: pointer;
 }
 
 .card__description {
@@ -43,6 +44,7 @@
   width: 21px;
   border: none;
   border-radius: 0 0 10px;
+  transition: all 1s ease-in-out;
 }
 
 .card__like-button_active {
@@ -64,6 +66,7 @@
   border: none;
   transition: opacity 1s ease-in-out;
   background-size: contain;
+  transition: all 1s ease-in-out;
 }
 
 .card__delete-button:hover {
