--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,7 +26,7 @@
   padding: 36px;
   border-radius: 10px;
   position: relative;
-  width: 430px;
+  width: 358px;
   max-width: 100%;
 }
 
@@ -44,17 +44,24 @@
   cursor: pointer;
 }
 
+.popup__close-button:hover {
+  color: #fff;
+  opacity: 0.6;
+}
+
 .popup__heading {
   color: #000;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-  width: 330px;
-  height: 23px;
-  left: 36px;
-  top: 34px;
+  max-width: 330px;
+  width: 100%;
+  max-height: 23px;
+  height: 100%;
   margin-bottom: 0;
+  margin-top: 0;
+  padding-bottom: 54px;
 }
 
 .popup__form {
@@ -63,39 +70,22 @@
 }
 
 .popup__input::placeholder {
-  color: #000;
+  color: #c4c4c4;
 }
 
 .popup__input {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
   border: none;
-  padding-top: 54px;
   padding-bottom: 13px;
-  margin-bottom: 29px;
+  margin-bottom: 30px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-/* .popup__input_type_url {
-  font-family: "Inter";
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 17px;
-  border: none;
-  margin-top: 43px;
-  margin-bottom: 48px;
-  padding-bottom: 13px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2); */
-/* } */
-
-/* .popup__input::placeholder {
-  color: #000;
-} */
-
 .popup__save-button {
-  width: 358px;
+  width: 100%;
   height: 50px;
   max-width: 100%;
   background-color: #000;
@@ -106,9 +96,16 @@
   line-height: 22px;
   align-content: center;
   border: none;
+  margin-top: 35px;
+  padding: 0;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 544px) {
+.popup__save-button:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 880px) {
   .popup {
     top: 123px;
   }
@@ -121,19 +118,18 @@
     padding: 0;
   }
   .popup__heading {
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 14px;
+    line-height: 17px;
     margin: 25px 0 0;
-    padding: 0 22px 0;
+    padding: 0 22px 76px;
     max-width: 238px;
   }
   .popup__form {
     padding: 0 22px 0;
   }
-  .popup__title {
+  .popup__input_type_title {
     margin-top: 0;
     max-width: 238px;
-    padding-top: 75px;
   }
   .popup__close-button {
     width: 26px;
@@ -142,7 +138,7 @@
     bottom: calc(100% + 39px);
   }
 
-  .popup__description {
+  .popup__input_type_description {
     max-width: 238px;
     margin-top: 0;
     padding-top: 30px;
@@ -155,7 +151,7 @@
     height: 46px;
     margin-bottom: 25px;
     font-size: 14px;
-    margin-top: 45px;
+    margin-top: 16px;
     padding: 0;
   }
 }
