--- a/blocks/card.css
+++ b/blocks/card.css
@@ -27,7 +27,7 @@
 }
 
 .card__title {
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
