--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,12 +41,12 @@
   position: absolute;
   bottom: calc(100% + 5px);
   left: calc(100% + 5px);
-  cursor: pointer;
 }
 
 .popup__close-button:hover {
   color: #fff;
   opacity: 0.6;
+  cursor: pointer;
 }
 
 .popup__heading {
@@ -67,6 +67,7 @@
 .popup__form {
   display: flex;
   flex-direction: column;
+  width: 358px;
 }
 
 .popup__input::placeholder {
@@ -82,12 +83,12 @@
   padding-bottom: 13px;
   margin-bottom: 30px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  width: 100%;
 }
 
 .popup__save-button {
   width: 100%;
   height: 50px;
-  max-width: 100%;
   background-color: #000;
   color: #fff;
   font-family: "Inter";
@@ -96,13 +97,13 @@
   line-height: 22px;
   align-content: center;
   border: none;
-  margin-top: 35px;
+  margin-top: 18px;
   padding: 0;
-  cursor: pointer;
 }
 
 .popup__save-button:hover {
   opacity: 0.8;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 880px) {
@@ -118,24 +119,25 @@
     padding: 0;
   }
   .popup__heading {
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 18px;
+    line-height: 22px;
     margin: 25px 0 0;
     padding: 0 22px 76px;
     max-width: 238px;
   }
   .popup__form {
     padding: 0 22px 0;
+    max-width: 238px;
   }
   .popup__input_type_title {
     margin-top: 0;
-    max-width: 238px;
+    max-width: 100%;
   }
   .popup__close-button {
     width: 26px;
     height: 26px;
-    left: calc(100% - 26px);
-    bottom: calc(100% + 39px);
+    left: calc(100% + 3px);
+    bottom: calc(100% + 3px);
   }
 
   .popup__input_type_description {
@@ -145,6 +147,7 @@
     padding-bottom: 13px;
     margin-bottom: 45px;
     margin-bottom: 0;
+    max-width: 100%;
   }
   .popup__save-button {
     width: 238px;
