--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -81,7 +81,7 @@
   line-height: 17px;
   border: none;
   padding-bottom: 13px;
-  margin-bottom: 30px;
+  margin-top: 13px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   width: 100%;
 }
