--- a/pages/index.css
+++ b/pages/index.css
@@ -8,3 +8,4 @@
 @import url(../blocks/footer.css);
 @import url(../blocks/modal.css);
 @import url(../blocks/cardImagePopup.css);
+@import url(../blocks/popupError.css);
