--- a/blocks/popupError.css
+++ b/blocks/popupError.css
@@ -1,3 +1,7 @@
+.popup__input_type_error {
+  visibility: visible;
+}
+
 .popup__error_visible {
   font-family: "Inter", Arial, sans-serif;
   font-size: 12px;
@@ -5,4 +9,8 @@
   font-weight: 400;
   color: red;
   padding-top: 5px;
+}
+
+.popup__error {
+  border-bottom: 1px solid #ff0000;
 }
