--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -106,6 +106,28 @@
   cursor: pointer;
 }
 
+.popup__button_disabled {
+  border-radius: 2px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: white;
+  color: #000;
+  opacity: 0.2;
+}
+
+.popup__input_type_error {
+  visibility: visible;
+  border-bottom: 1px solid #ff0000;
+}
+
+.popup__error_visible {
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 12px;
+  line-height: 14.52px;
+  font-weight: 400;
+  color: red;
+  padding-top: 5px;
+}
+
 @media screen and (max-width: 880px) {
   .popup {
     top: 123px;
